--- a/twitter-clone-blockchain/package.json
+++ b/twitter-clone-blockchain/package.json
@@ -9,7 +9,8 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "timeago": "^1.6.7"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
